...
          }} />
        <Tabs.Screen
          name='create'
          options={{
            title: 'Create',
            tabBarButton: () => (
              <Pressable style={{ alignItems: 'center', margin: 'auto' }} onPress={() => setModalVisible(true)} testID="create-tab">
                <Ionicons name={modalVisible ? 'add-circle' : 'add-circle-outline'} size={40} color={modalVisible ? tabBarActiveTintColor : tabBarInactiveTintColor} />
              </Pressable>
            ),
          }} />
        <Tabs.Screen name="progress" options={{
          title: 'Progress',
...
